load("@rules_python//python:py_binary.bzl", "py_binary")
load("@rules_python//python:py_test.bzl", "py_test")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

exports_files([
    "bundle_v1.bzl",
    "gerbil_project_environment.bzl",
    "gerbil_projection.bzl",
    "gerbil_receipt.bzl",
])

sh_test(
    name = "shared_gerbil_capability_test",
    srcs = ["shared_gerbil_capability_test.sh"],
    args = [
        "$(rlocationpath @local_gerbil//:toolchain.receipt.json)",
    ],
    data = [
        "@local_gerbil//:toolchain.receipt.json",
    ],
)

py_binary(
    name = "gerbil_project_environment_tool",
    srcs = [
        "gerbil_environment.py",
        "gerbil_project_environment_tool.py",
    ],
    main = "gerbil_project_environment_tool.py",
    python_version = "3.12",
)

py_test(
    name = "gerbil_project_environment_tool_test",
    srcs = [
        "gerbil_environment.py",
        "gerbil_project_environment_tool.py",
        "gerbil_project_environment_tool_test.py",
    ],
    main = "gerbil_project_environment_tool_test.py",
    python_version = "3.12",
)

py_binary(
    name = "scheme_projection_artifact_tool",
    srcs = [
        "gerbil_environment.py",
        "scheme_projection_artifact_tool.py",
    ],
    main = "scheme_projection_artifact_tool.py",
    python_version = "3.12",
    deps = ["//packages/python-runtime/src/poo_flow_runtime:scheme_datum_tool"],
)

py_test(
    name = "scheme_projection_artifact_tool_test",
    srcs = [
        "gerbil_environment.py",
        "scheme_projection_artifact_tool.py",
        "scheme_projection_artifact_tool_test.py",
    ],
    main = "scheme_projection_artifact_tool_test.py",
    python_version = "3.12",
    deps = ["//packages/python-runtime/src/poo_flow_runtime:scheme_datum_tool"],
)
