load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "bundle_v1_headers",
    hdrs = ["include/poo_flow/bundle_v1.h"],
    strip_include_prefix = "include",
)

cc_library(
    name = "bundle_v1",
    srcs = ["src/bundle_v1.c"],
    copts = [
        "-std=c11",
        "-Wall",
        "-Wextra",
        "-Werror",
        "-pedantic",
    ],
    deps = [":bundle_v1_headers"],
    alwayslink = True,
)

cc_binary(
    name = "bundle_v1_shared",
    deps = [":bundle_v1"],
    linkshared = True,
)

cc_test(
    name = "bundle_v1_harness",
    srcs = ["tests/bundle_v1_harness.c"],
    copts = [
        "-std=c11",
        "-Wall",
        "-Wextra",
        "-Werror",
        "-pedantic",
    ],
    deps = [":bundle_v1"],
)

cc_test(
    name = "bundle_v1_cpp_consumer",
    srcs = ["tests/bundle_v1_cpp_consumer.cc"],
    copts = [
        "-std=c++17",
        "-Wall",
        "-Wextra",
        "-Werror",
        "-pedantic",
    ],
    deps = [":bundle_v1"],
)

cc_test(
    name = "bundle_v1_harness_asan",
    srcs = [
        "src/bundle_v1.c",
        "tests/bundle_v1_harness.c",
    ],
    copts = [
        "-fsanitize=address",
        "-fno-omit-frame-pointer",
        "-std=c11",
        "-Wall",
        "-Wextra",
        "-Werror",
        "-pedantic",
    ],
    linkopts = ["-fsanitize=address"],
    deps = [":bundle_v1_headers"],
)

cc_test(
    name = "bundle_v1_harness_ubsan",
    srcs = [
        "src/bundle_v1.c",
        "tests/bundle_v1_harness.c",
    ],
    copts = [
        "-fsanitize=undefined",
        "-fno-omit-frame-pointer",
        "-std=c11",
        "-Wall",
        "-Wextra",
        "-Werror",
        "-pedantic",
    ],
    linkopts = ["-fsanitize=undefined"],
    deps = [":bundle_v1_headers"],
)

cc_binary(
    name = "bundle_v1_lookup_benchmark",
    srcs = ["benchmarks/bundle_v1_lookup_benchmark.c"],
    copts = [
        "-O3",
        "-std=c11",
        "-Wall",
        "-Wextra",
        "-Werror",
        "-pedantic",
    ],
    deps = [":bundle_v1"],
)

test_suite(
    name = "bundle_v1_tests",
    tests = [
        ":bundle_v1_cpp_consumer",
        ":bundle_v1_harness",
        ":bundle_v1_harness_asan",
        ":bundle_v1_harness_ubsan",
    ],
)
